Fixed double-tap zoom on mobile and minor style change

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 .row {
-  float:left;
+  float: left;
   width: 100%;
   height: 2.5%;
 }
@@ -35,26 +35,32 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .content-wrapper {width: 100%;}
-  .button-wrapper {width: 100%;}
+  .content-wrapper {
+    width: 100%;
+  }
+  .button-wrapper {
+    width: 100%;
+  }
 }
 
+.nextButton,
+.backButton {
+  background-color: #ced123;
+  border: 0;
+  padding: 10px;
+  margin: 1px;
+}
 
-.nextButton, .backButton {
+.next10Button,
+.back10Button {
   background-color: #23d194;
   border: 0;
   padding: 10px;
   margin: 1px;
 }
 
-.next10Button, .back10Button {
-  background-color: #23d194;
-  border: 0;
-  padding: 10px;
-  margin: 1px;
-}
-
-.jumpToStartButton, .jumpToEndButton {
+.jumpToStartButton,
+.jumpToEndButton {
   background-color: #23d194;
   border: 0;
   padding: 10px;
@@ -64,12 +70,16 @@
 .controlButton {
   box-sizing: border-box;
   height: 50px;
-  background-color: #38e1ff;
+  color: white;
+  /* #38e1ff */
+  background-color: #3888ff;
   border: 0;
   padding: 17px;
-  margin: 1px;
+  margin-left: 3px;
   float: left;
   outline: none;
+  touch-action: manipulation;
+  border-radius: 10px;
 }
 .controlButton:hover {
   background-color: #ff5638;
@@ -90,6 +100,7 @@
   float: left;
   padding: 10px;
   margin: 1px;
+  border-radius: 10px;
 }
 
 .clearfix::after {
@@ -100,4 +111,11 @@
 
 .infoContainer {
   padding: 15px;
+}
+
+input {
+  border-radius: 10px;
+  border-width: 0;
+  height: 20px;
+  text-align: center;
 }
